test/data/syntax-errors/function-missing-end.ava
var thisFunction = function () -> return 1;